feat: Improve scroll behavior and header layout
Adjust scroll behavior to account for the fixed header, ensuring anchor links scroll to the correct position. Refactor the header component to use a split navigation layout for desktop and remove unnecessary scroll event listeners. Update hero section styling for better background video cover behavior. Add justify alignment to descriptive text in AboutUs and VisionMission components.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
       ::-webkit-scrollbar-thumb:hover {
         background: #b89b3f;
       }
+      /* Offset for fixed header when scrolling to anchor links */
+      section[id] {
+        scroll-margin-top: 6rem; /* 96px for desktop */
+      }
+      @media (max-width: 767px) {
+        section[id] {
+          scroll-margin-top: 5rem; /* 80px for mobile */
+        }
+      }
     </style>
   <script type="importmap">
 {
